syntax = "proto3";

package tzero.v1.payment;

option java_multiple_files = true;
option java_package = "network.t0.sdk.proto.tzero.v1.payment";

import "tzero/v1/common/common.proto";
import "tzero/v1/common/payment_method.proto";
import "tzero/v1/common/payment_receipt.proto";
import "ivms101/v1/ivms/ivms101.proto";
import "google/protobuf/timestamp.proto";

/**
 * This service is used by provider to interact with the Network, e.g. push quotes and initiate payments.
 *
 * All methods of this service are idempotent, meaning they are safe to retry and multiple calls with the same parameters will have no additional effect.
 */
service NetworkService {

  /**
    * Used by the provider to publish pay-in and pay-out quotes (FX rates) into the network.
    * These quotes include tiered pricing bands and an expiration timestamp.
   */
  rpc UpdateQuote(UpdateQuoteRequest) returns (UpdateQuoteResponse)  {
    option idempotency_level = IDEMPOTENT;
  };

  /**
   * Request the best available quote for a payout in a specific currency, for a given amount.
   * If the payout quote exists, but the credit limit is exceeded, this quote will not be considered.
   * Before calling this endpoint UpdateQuote should be periodically triggered in order to put pay-in quotes into the network.
   */
  rpc GetQuote(GetQuoteRequest) returns (GetQuoteResponse) {
    option idempotency_level = NO_SIDE_EFFECTS;
  };

  /**
    * Submit a request to create a new payment. PayIn currency and QuoteId are the optional parameters.
   */
  rpc CreatePayment(CreatePaymentRequest) returns (CreatePaymentResponse) {
    option idempotency_level = IDEMPOTENT;
  };

  /**
   * Inform the network that a payout has been completed. This endpoint is called by the payout
   * provider, specifying the payment ID and payout ID, which was provided when the payout request was made to this provider.
   */
  rpc ConfirmPayout(ConfirmPayoutRequest) returns (ConfirmPayoutResponse)  {
    option idempotency_level = IDEMPOTENT;
  };


  /**
   * Pay-out provider reports the result of manual AML check.
   */
  rpc CompleteManualAmlCheck(CompleteManualAmlCheckRequest) returns (CompleteManualAmlCheckResponse) {
    option idempotency_level = IDEMPOTENT;
  };
}

/*
 * Base currency is always USD, so the quotes are always in USD/currency format.
 */
message UpdateQuoteRequest {
  /**
   * Zero or more quotes for pay-out operations.
   */
  repeated Quote pay_out = 10;
  /**
   * Zero or more quotes for pay-in operations.
   */
  repeated Quote pay_in = 20;

  message Quote {
    string currency = 10; // BRL, EUR, GBP, etc. (ISO 4217 currency code)

    QuoteType quote_type = 20;
    // Payment method must be specified
    tzero.v1.common.PaymentMethodType payment_method = 25;

    repeated Band bands = 30; // list of bands for this quote

    google.protobuf.Timestamp expiration = 60; // expiration time of the quote

    google.protobuf.Timestamp timestamp = 70; // timestamp quote was created

    message Band {

      string client_quote_id = 10; // unique client generated id for this band

      tzero.v1.common.Decimal max_amount = 40; // max amount of USD this quote is applicable for

      tzero.v1.common.Decimal rate = 50; // USD/currency rate
    }
  }
}

message UpdateQuoteResponse {}

message GetQuoteRequest {
  string pay_in_currency = 10; // ISO 4217 currency code
  PaymentAmount amount = 20; // amount
  tzero.v1.common.PaymentMethodType pay_in_method = 30; // payment method

  string pay_out_currency = 40; // ISO 4217 currency code
  tzero.v1.common.PaymentMethodType pay_out_method = 50; // payment method

  QuoteType quote_type = 60; // type of the quote
}

message GetQuoteResponse {

  oneof result {
    /**
     * Success response - the network found a suitable quote.
     */
    Success success = 20;
    /**
     * Failure response - means the quote was not found for the specified parameters.
     */
    Failure failure = 30;
  };

  message Success {
    tzero.v1.common.Decimal rate = 10; // exchange rate
    google.protobuf.Timestamp expiration = 20; // expiration time
    QuoteId quote_id = 30; // id of the payout quote
  }

  message Failure {
    Reason reason = 10;

    enum Reason {
      REASON_UNSPECIFIED = 0;
      REASON_QUOTE_NOT_FOUND = 10;
    }
  }
}

message CreatePaymentRequest{
  string payment_client_id = 10; // unique client generated id for this payment

  PaymentAmount amount = 30; // payment amount
  PayIn pay_in = 40; // pay-in details
  PayOut pay_out = 45; // payout details

  message PayIn {
    string currency = 10; // pay-in currency
    tzero.v1.common.PaymentMethodType payment_method = 20; // pay-in payment method
  }

  message PayOut {
    string currency = 10; // pay-out currency
    tzero.v1.common.PaymentDetails payment_details = 20; // pay-in payment details
    optional QuoteId quote_id = 100;
  }

  optional TravelRuleData travel_rule_data = 100; // travel rule data

  message TravelRuleData {
    /**
     * the natural or legal person that requests payment with originating provider
     */
    repeated ivms101.Person originator = 10;

    /**
     * the natural or legal person or legal arrangement who is identified
     * by the originator as the receiver of the requested payment.
     */
    repeated ivms101.Person beneficiary = 20;
  }
}

message QuoteId {
  int64 quote_id = 30; // unique identifier of the quote
  int32 provider_id = 40; // provider id of the quote
}

message CreatePaymentResponse {
  string payment_client_id = 10; // client generated id supplied in the request

  oneof result {
    /**
     * Success response - means the payment was accepted.
     */
    Success success = 20;
    /**
     * Failure response - means the payment was not accepted.
     */
    Failure failure = 30;
  };

  message Success {
    uint64 payment_id = 10; // payment ID assigned by the network
    tzero.v1.common.Decimal pay_in_amount = 20;
    tzero.v1.common.Decimal settlement_amount = 30;
  }

  message Failure {
    Reason reason = 10;

    enum Reason {
      REASON_UNSPECIFIED = 0;
      REASON_QUOTE_NOT_FOUND = 10;
      REASON_CREDIT_OR_PREDEPOSIT_REQUIRED = 20;
    }
  }
}

message ConfirmPayoutRequest{
  uint64 payment_id = 10; // payment id assigned by the network
  uint64 payout_id = 20; // payout id assigned by the payout provider

  /**
  * Payment receipt might contain metadata about payment recognizable by pay-in provider.
  */
  optional tzero.v1.common.PaymentReceipt receipt = 30;
}

message ConfirmPayoutResponse{}

message CompleteManualAmlCheckRequest {
  uint64 payment_id = 10;

  oneof result {
    Approved approved = 30;
    Rejected rejected = 40;
  }

  message Approved {}

  message Rejected {
    string reason = 10;
  }
}

message CompleteManualAmlCheckResponse {
  oneof result {
    Approved approved = 30;
    Rejected rejected = 40;
  }

  message Approved {
    /**
     * amount in currency of the payout
     */
    tzero.v1.common.Decimal pay_out_amount = 10;

    tzero.v1.common.Decimal settlement_amount = 20;

    /*
     unique identifier of the pay-out quote
     */
    int64 pay_out_quote_id = 30;
  }

  // Rejected means that the updated quotes were rejected
  message Rejected {}
}


// Payment amount could be specified either as pay-in amount or as pay-out amount
message PaymentAmount {
  oneof amount {
    tzero.v1.common.Decimal pay_in_amount = 10; // Amount in the pay-in currency
    tzero.v1.common.Decimal pay_out_amount = 20; // Amount in the pay-out currency
  }
}

enum QuoteType {
  QUOTE_TYPE_UNSPECIFIED = 0;
  QUOTE_TYPE_REALTIME = 1; // real-time quote must be valid at least for 30 seconds
}
